Fixed too many accessor methods issue Fixed ext 5.x build issue with Cmd guide search Fixed accessor member row collapsed height

--- a/libk/assets/css/main.css
+++ b/libk/assets/css/main.css
@@ -2746,12 +2746,13 @@ img.social {
 /* End Search */
 
 .accessor-method {
-    position: relative;
-    padding: 22px 60px 15px 30px !important;
-    background-color: #F7F7F7;
-    margin-top: 10px;
-    margin-left: 30px;
-    border: 1px solid #e9e9e9;
+    position         : relative;
+    padding          : 22px 60px 15px 30px !important;
+    background-color : #F7F7F7;
+    margin-top       : 10px;
+    margin-left      : 30px;
+    border           : 1px solid #e9e9e9;
+    height           : 40px !important;
 }
 
 .isGetter:before,
